tests/ui/layout/uncomputable-due-to-trivial-bounds-ice-135138.stderr
error[E0080]: entering unreachable code
  --> $DIR/uncomputable-due-to-trivial-bounds-ice-135138.rs:7:10
   |
LL |     [(); { let _a: Option<str> = None; 0 }];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `return_str::{constant#0}` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
